acvus-mir-test/tests/snapshots/inline__inline_extern_chain_preserved.snap
---
source: acvus-mir-test/tests/inline.rs
expression: ir
---
=== literals ===
  T0 = "hello"

=== main ===
     1 │   r0 = ref $v1
     2 │   r1 = load r0
     3 │   r2 = call #0(r1)
     4 │   r3 = call #1(r2)
     5 │   return r3

    ; r0 (v4) : Ref<String>
    ; r1 ($s) : String
    ; r2 (len_str(...)) : Int
    ; r3 (to_string(...)) : String
    ; r4 (v1) : String
    ; r5 (process(...)) : String
