acvus-mir-test/tests/snapshots/inline__inline_indirect_call_preserved.snap
---
source: acvus-mir-test/tests/inline.rs
expression: ir
---
=== main ===
     0 │   r0 = undef
     1 │   r1 = closure L0 []
     3 │   r2 = call r1(5 (r3))
     4 │   return r2

    ; r0 (v4) : Fn(Int) -> Int
    ; r1 (v0) : Fn(Int) -> Int
    ; r2 (f(...)) : Int
    ; r3 (v1) : Int
    ; r4 (f) : Fn(Int) -> Int

=== closure L0 (ValueId(0)) ===
     0 │   r0 = undef
     2 │   r1 = r2 + 1 (r3)
     3 │   return r1

    ; r0 (v4) : Int
    ; r1 (v3) : Int
    ; r2 (v0) : Int
    ; r3 (v2) : Int
    ; r4 (x) : Int
