acvus-mir-test/tests/snapshots/inline__inline_io_effect_extern_inside.snap
---
source: acvus-mir-test/tests/inline.rs
expression: ir
---
=== main ===
     1 │   r0 = call #0(1 (r1))
     2 │   return r0

    ; r0 (fetch(...)) : String
    ; r1 (v0) : Int
    ; r2 (wrapper(...)) : String
    ; r3 ($id) : Int
