acvus-mir-test/tests/snapshots/inline__inline_list_collect_pattern.snap
---
source: acvus-mir-test/tests/inline.rs
expression: ir
---
=== main ===
     3 │   r0 = list [1 (r1), 2 (r2), 3 (r3)]
     4 │   r4 = cast DequeToList r0
     5 │   r5 = ref $v5
     6 │   r6 = load r5
     7 │   r7 = call #0(r6)
     8 │   r8 = closure L0 []
     9 │   r9 = call #1(r7, r8)
    10 │   r10 = call #2(r9)
    11 │   return r10

    ; r0 (v4) : Deque<Int, Identity(IdentityId(0))>
    ; r1 (v1) : Int
    ; r2 (v2) : Int
    ; r3 (v3) : Int
    ; r4 (v5) : List<Int>
    ; r5 (v8) : Ref<List<Int>>
    ; r6 ($xs) : List<Int>
    ; r7 (v10) : Iterator<?0, Resolved(EffectSet { reads: {}, writes: {}, io: false, self_modifying: false })>
    ; r8 (v11) : Fn(Int) -> Int
    ; r9 (map(...)) : Iterator<Int, Resolved(EffectSet { reads: {}, writes: {}, io: false, self_modifying: false })>
    ; r10 (collect(...)) : List<Int>
    ; r11 (to_list(...)) : List<Int>
