acvus-mir-test/tests/snapshots/inline__inline_multi_arg.snap
---
source: acvus-mir-test/tests/inline.rs
expression: ir
---
=== main ===
     2 │   r0 = 3 (r1) + 4 (r2)
     3 │   return r0

    ; r0 (v5) : Int
    ; r1 (v0) : Int
    ; r2 (v1) : Int
    ; r3 ($a) : Int
    ; r4 ($b) : Int
    ; r5 (add(...)) : Int
