acvus-mir-test/tests/snapshots/inline__inline_multiple_calls.snap
---
source: acvus-mir-test/tests/inline.rs
expression: ir
---
=== main ===
     2 │   r0 = 1 (r1) + 1 (r2)
     5 │   r3 = 2 (r4) + 1 (r5)
     6 │   r6 = r0 + r3
     7 │   return r6

    ; r0 (v8) : Int
    ; r1 (v1) : Int
    ; r2 (v7) : Int
    ; r3 (v11) : Int
    ; r4 (v3) : Int
    ; r5 (v10) : Int
    ; r6 (v5) : Int
    ; r7 ($x) : Int
    ; r8 (inc(...)) : Int
    ; r9 ($x) : Int
    ; r10 (inc(...)) : Int
